--- a/src/app/tree/tree.component.css
+++ b/src/app/tree/tree.component.css
@@ -1,6 +1,15 @@
 :host {
-    display: block;
-    margin: 0;
-    padding: 0;
-  }
-  
+  display: block;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+#canvasContainer {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: transparent;
+}
