Split the logic into two separate components and passed data from one to the other

--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -1,1 +1,2 @@
 <div #canvasContainer></div>
+<app-decoration [scene]="scene" [camera]="camera" [renderer]="renderer" [levels]="levels"></app-decoration>
